implement the first page

--- a/index.html
+++ b/index.html
@@ -53,12 +53,87 @@
 <section class="main home">
 	<div class="container">
 		<div class="row">
-			<div class="col-12">
+			<div class="col-12 wrapper-content">
 				<div class="text-section">
 					<h1 class="main-title">
 						Redefining Benefits
 					</h1>
 					<p class="description">Your employees are unique. Their benefits should be too.</p>
+					<div class="buttons-wrapper">
+						<a href="#" class="button full-blue hover-state">Play Video</a>
+						<a href="#" class="button transparent-blue hover-state">Sign Up</a>
+					</div>
+				</div>
+				<div class="media-section video">
+					<iframe width="100%" height="100%" src="https://www.youtube.com/embed/wMnoL74iBgQ?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay=0&rel=0; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+			</div>
+			<div class="col-12">
+				<div class="tiles-wrapper">
+					<div class="tile-wrapper">
+						<div class="tile">
+							<h3 class="tile-title small-title">Become an Ajuda Vendor</h3>
+							<a href="#" class="button primary-blue hover-state small"><span class="text">Learn More</span> <img src="img/white-icon.svg" alt=""></a>
+						</div>
+					</div>
+					<div class="tile-wrapper">
+						<div class="tile">
+							<h3 class="tile-title small-title">Use Ajuda with Your Company</h3>
+							<a href="#" class="button primary-blue hover-state small">Learn More <img src="img/white-icon.svg" alt=""></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="benefits">
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<div class="content-wrapper">
+					<div class="content-block">
+						<h6 class="smallest-title">sign up today</h6>
+						<h3 class="middle-main-title">Ready to Benefit from Ajuda?</h3>
+						<p class="description">Sign up and a benefits expert will reach out to you shortly.</p>
+						<div class="form-block">
+						</div>
+					</div>
+					<div class="img-block">
+						<img src="img/girl-model.png" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="how-it-works">
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<div class="content-wrapper">
+					<h3 class="middle-main-title">How It Works</h3>
+					<p class="description">Ajuda is an easy-to-use web app where employees find and select services that suit them from an open marketplace of providers, with options ranging from Accounting to Zoomba. </p>
+				</div>
+				<div class="tiles-wrapper">
+					<div class="tile">
+						<div class="tile-body">
+							<img src="img/how-it-works-1.png" alt="">
+							<h4 class="smallest-title">Employers set a budget</h4>
+						</div>
+					</div>
+					<div class="tile">
+						<div class="tile-body">
+							<img src="img/how-it-works-2.png" alt="">
+							<h4 class="smallest-title">Employees choose a vendor</h4>
+						</div>
+					</div>
+					<div class="tile">
+						<div class="tile-body">
+							<img src="img/how-it-works-3.png" alt="">
+							<h4 class="smallest-title">Employees enjoy their benefits</h4>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
