--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Заголовок</title>
+	<title>Ajuda | Home page</title>
 	<meta name="description" content="">
 
 	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
@@ -46,10 +46,21 @@
 					<li><a href="#" class="hover-state">ABOUT</a></li>
 					<li><a href="#" class="hover-state">FAQ</a></li>
 				</ul>
+				<a href="#" class="menu-button">MENU</a>
 			</div>
 		</div>
 	</div>
 </header>
+<nav class="top_mnu">
+	<ul>
+		<li><a href="#">Home</a></li>
+		<li><a href="#">For Vendors</a></li>
+		<li><a href="#">For Employers</a></li>
+		<li><a href="#">About</a></li>
+		<li><a href="#">FAQ</a></li>
+		<li><a href="#" class="menu-button">close menu</a></li>
+	</ul>
+</nav>
 <section class="main home">
 	<div class="container">
 		<div class="row">
@@ -60,8 +71,8 @@
 					</h1>
 					<p class="description">Your employees are unique. Their benefits should be too.</p>
 					<div class="buttons-wrapper">
-						<a href="#" class="button full-blue hover-state">Play Video</a>
-						<a href="#" class="button transparent-blue hover-state">Sign Up</a>
+						<a href="#" class="button full-blue hover-change">Play Video</a>
+						<a href="#" class="button transparent-blue hover-change">Sign Up</a>
 					</div>
 				</div>
 				<div class="media-section video">
@@ -97,8 +108,10 @@
 						<h3 class="middle-main-title">Ready to Benefit from Ajuda?</h3>
 						<p class="description">Sign up and a benefits expert will reach out to you shortly.</p>
 						<div class="form-block">
-<!--							<script type="text/javascript" src="https://form.jotform.com/jsform/212202837855355"></script>-->
-<!--							<iframe id="JotFormIFrame-212202837855355" title="Homepage Form" onload="window.parent.scrollTo(0,0)" allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera" src="https://form.jotform.com/212202837855355" frameborder="0" style=" min-width: 100%; height:539px; border:none;" scrolling="no" > </iframe> <script type="text/javascript"> var ifr = document.getElementById("JotFormIFrame-212202837855355"); if (ifr) { var src = ifr.src; var iframeParams = []; if (window.location.href && window.location.href.indexOf("?") > -1) { iframeParams = iframeParams.concat(window.location.href.substr(window.location.href.indexOf("?") + 1).split('&')); } if (src && src.indexOf("?") > -1) { iframeParams = iframeParams.concat(src.substr(src.indexOf("?") + 1).split("&")); src = src.substr(0, src.indexOf("?")) } iframeParams.push("isIframeEmbed=1"); ifr.src = src + "?" + iframeParams.join('&'); } window.handleIFrameMessage = function(e) { if (typeof e.data === 'object') { return; } var args = e.data.split(":"); if (args.length > 2) { iframe = document.getElementById("JotFormIFrame-" + args[(args.length - 1)]); } else { iframe = document.getElementById("JotFormIFrame"); } if (!iframe) { return; } switch (args[0]) { case "scrollIntoView": iframe.scrollIntoView(); break; case "setHeight": iframe.style.height = args[1] + "px"; break; case "collapseErrorPage": if (iframe.clientHeight > window.innerHeight) { iframe.style.height = window.innerHeight + "px"; } break; case "reloadPage": window.location.reload(); break; case "loadScript": if( !window.isPermitted(e.origin, ['jotform.com', 'jotform.pro']) ) { break; } var src = args[1]; if (args.length > 3) { src = args[1] + ':' + args[2]; } var script = document.createElement('script'); script.src = src; script.type = 'text/javascript'; document.body.appendChild(script); break; case "exitFullscreen": if (window.document.exitFullscreen) window.document.exitFullscreen(); else if (window.document.mozCancelFullScreen) window.document.mozCancelFullScreen(); else if (window.document.mozCancelFullscreen) window.document.mozCancelFullScreen(); else if (window.document.webkitExitFullscreen) window.document.webkitExitFullscreen(); else if (window.document.msExitFullscreen) window.document.msExitFullscreen(); break; } var isJotForm = (e.origin.indexOf("jotform") > -1) ? true : false; if(isJotForm && "contentWindow" in iframe && "postMessage" in iframe.contentWindow) { var urls = {"docurl":encodeURIComponent(document.URL),"referrer":encodeURIComponent(document.referrer)}; iframe.contentWindow.postMessage(JSON.stringify({"type":"urls","value":urls}), "*"); } }; window.isPermitted = function(originUrl, whitelisted_domains) { var url = document.createElement('a'); url.href = originUrl; var hostname = url.hostname; var result = false; if( typeof hostname !== 'undefined' ) { whitelisted_domains.forEach(function(element) { if( hostname.slice((-1 * element.length - 1)) === '.'.concat(element) || hostname === element ) { result = true; } }); return result; } }; if (window.addEventListener) { window.addEventListener("message", handleIFrameMessage, false); } else if (window.attachEvent) { window.attachEvent("onmessage", handleIFrameMessage); } </script>-->
+							<div class="img-snippet">
+								<img src="img/girl-model.png" alt="">
+							</div>
+							<iframe id="JotFormIFrame-221653629656363" title="Vendor Form" onload="window.parent.scrollTo(0,0)" allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera" src="https://form.jotform.com/221653629656363" frameborder="0" style=" min-width: 100%; height:539px; border:none;" scrolling="no" > </iframe> <script type="text/javascript"> var ifr = document.getElementById("JotFormIFrame-221653629656363"); if (ifr) { var src = ifr.src; var iframeParams = []; if (window.location.href && window.location.href.indexOf("?") > -1) { iframeParams = iframeParams.concat(window.location.href.substr(window.location.href.indexOf("?") + 1).split('&')); } if (src && src.indexOf("?") > -1) { iframeParams = iframeParams.concat(src.substr(src.indexOf("?") + 1).split("&")); src = src.substr(0, src.indexOf("?")) } iframeParams.push("isIframeEmbed=1"); ifr.src = src + "?" + iframeParams.join('&'); } window.handleIFrameMessage = function(e) { if (typeof e.data === 'object') { return; } var args = e.data.split(":"); if (args.length > 2) { iframe = document.getElementById("JotFormIFrame-" + args[(args.length - 1)]); } else { iframe = document.getElementById("JotFormIFrame"); } if (!iframe) { return; } switch (args[0]) { case "scrollIntoView": iframe.scrollIntoView(); break; case "setHeight": iframe.style.height = args[1] + "px"; break; case "collapseErrorPage": if (iframe.clientHeight > window.innerHeight) { iframe.style.height = window.innerHeight + "px"; } break; case "reloadPage": window.location.reload(); break; case "loadScript": if( !window.isPermitted(e.origin, ['jotform.com', 'jotform.pro']) ) { break; } var src = args[1]; if (args.length > 3) { src = args[1] + ':' + args[2]; } var script = document.createElement('script'); script.src = src; script.type = 'text/javascript'; document.body.appendChild(script); break; case "exitFullscreen": if (window.document.exitFullscreen) window.document.exitFullscreen(); else if (window.document.mozCancelFullScreen) window.document.mozCancelFullScreen(); else if (window.document.mozCancelFullscreen) window.document.mozCancelFullScreen(); else if (window.document.webkitExitFullscreen) window.document.webkitExitFullscreen(); else if (window.document.msExitFullscreen) window.document.msExitFullscreen(); break; } var isJotForm = (e.origin.indexOf("jotform") > -1) ? true : false; if(isJotForm && "contentWindow" in iframe && "postMessage" in iframe.contentWindow) { var urls = {"docurl":encodeURIComponent(document.URL),"referrer":encodeURIComponent(document.referrer)}; iframe.contentWindow.postMessage(JSON.stringify({"type":"urls","value":urls}), "*"); } }; window.isPermitted = function(originUrl, whitelisted_domains) { var url = document.createElement('a'); url.href = originUrl; var hostname = url.hostname; var result = false; if( typeof hostname !== 'undefined' ) { whitelisted_domains.forEach(function(element) { if( hostname.slice((-1 * element.length - 1)) === '.'.concat(element) || hostname === element ) { result = true; } }); return result; } }; if (window.addEventListener) { window.addEventListener("message", handleIFrameMessage, false); } else if (window.attachEvent) { window.attachEvent("onmessage", handleIFrameMessage); } </script>
 						</div>
 					</div>
 					<div class="img-block">
@@ -109,7 +122,7 @@
 		</div>
 	</div>
 </section>
-<section class="how-it-works">
+<section class="standard-p-block how-it-works bg-img-settings purple">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -141,71 +154,71 @@
 		</div>
 	</div>
 </section>
-<section class="our-partners">
-	<div class="container">
-		<div class="row">
-			<div class="col-12 d-flex flex-column align-items-center justify-content-center">
-				<h3 class="middle-main-title">Our Partners</h3>
-				<div class="grid-section">
-					<div class="grid-item">
-						<div class="grid-body"></div>
-					</div>
-					<div class="grid-item">
-						<div class="grid-body"></div>
-					</div>
-					<div class="grid-item">
-						<div class="grid-body"></div>
-					</div>
-					<div class="grid-item">
-						<div class="grid-body"></div>
-					</div>
-					<div class="grid-item">
-						<div class="grid-body"></div>
-					</div>
-					<div class="grid-item">
-						<div class="grid-body"></div>
-					</div>
-					<div class="grid-item">
-						<div class="grid-body"></div>
-					</div>
-					<div class="grid-item">
-						<div class="grid-body"></div>
-					</div>
-					<div class="grid-item">
-						<div class="grid-body"></div>
-					</div>
-					<div class="grid-item">
-						<div class="grid-body"></div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-12 wrapper-line">
-				<div class="left-side">
-					<a href="index.html" class="logo">
-						<img src="img/white-logo.png" alt="">
-					</a>
-					<ul class="nav-menu">
-						<li><a href="#">for vendors</a></li>
-						<li><a href="#">for employees</a></li>
-						<li><a href="#">about</a></li>
-						<li><a href="#">FAQ</a></li>
-					</ul>
-				</div>
-				<div class="right-side">
-					<a href="#" class="button medium-blue hover-state">Connect with Us</a>
-					<p class="simple-text">info@ajudabenefits.com</p>
-					<p class="simple-text">©2022 Ajuda benefits</p>
-				</div>
-			</div>
-		</div>
-	</div>
-</footer>
+<!--<section class="standard-p-block our-partners">-->
+<!--	<div class="container">-->
+<!--		<div class="row">-->
+<!--			<div class="col-12 d-flex flex-column align-items-center justify-content-center">-->
+<!--				<h3 class="middle-main-title">Our Partners</h3>-->
+<!--				<div class="grid-section">-->
+<!--					<div class="grid-item">-->
+<!--						<div class="grid-body"></div>-->
+<!--					</div>-->
+<!--					<div class="grid-item">-->
+<!--						<div class="grid-body"></div>-->
+<!--					</div>-->
+<!--					<div class="grid-item">-->
+<!--						<div class="grid-body"></div>-->
+<!--					</div>-->
+<!--					<div class="grid-item">-->
+<!--						<div class="grid-body"></div>-->
+<!--					</div>-->
+<!--					<div class="grid-item">-->
+<!--						<div class="grid-body"></div>-->
+<!--					</div>-->
+<!--					<div class="grid-item">-->
+<!--						<div class="grid-body"></div>-->
+<!--					</div>-->
+<!--					<div class="grid-item">-->
+<!--						<div class="grid-body"></div>-->
+<!--					</div>-->
+<!--					<div class="grid-item">-->
+<!--						<div class="grid-body"></div>-->
+<!--					</div>-->
+<!--					<div class="grid-item">-->
+<!--						<div class="grid-body"></div>-->
+<!--					</div>-->
+<!--					<div class="grid-item">-->
+<!--						<div class="grid-body"></div>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</div>-->
+<!--</section>-->
+<!--<footer>-->
+<!--	<div class="container">-->
+<!--		<div class="row">-->
+<!--			<div class="col-12 wrapper-line">-->
+<!--				<div class="left-side">-->
+<!--					<a href="index.html" class="logo">-->
+<!--						<img src="img/white-logo.png" alt="">-->
+<!--					</a>-->
+<!--					<ul class="nav-menu">-->
+<!--						<li><a href="#">for vendors</a></li>-->
+<!--						<li><a href="#">for employees</a></li>-->
+<!--						<li><a href="#">about</a></li>-->
+<!--						<li><a href="#">FAQ</a></li>-->
+<!--					</ul>-->
+<!--				</div>-->
+<!--				<div class="right-side">-->
+<!--					<a href="#" class="button medium-blue hover-state">Connect with Us</a>-->
+<!--					<p class="simple-text">info@ajudabenefits.com</p>-->
+<!--					<p class="simple-text">©2022 Ajuda benefits</p>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</div>-->
+<!--</footer>-->
 
 	<div class="loader">
 		<div class="loader_inner"></div>
@@ -218,12 +231,12 @@
 	<script src="libs/respond/respond.min.js"></script>
 	<![endif]-->
 	
-	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
-	<script src="libs/waypoints/waypoints.min.js"></script>
-	<script src="libs/animate/animate-css.js"></script>
+<!--	<script src="libs/jquery/jquery-1.11.2.min.js"></script>-->
+<!--	<script src="libs/waypoints/waypoints.min.js"></script>-->
+<!--	<script src="libs/animate/animate-css.js"></script>-->
 <!--	<script src="libs/plugins-scroll/plugins-scroll.js"></script>-->
 	
-	<script src="js/common.js"></script>
+<!--	<script src="js/common.js"></script>-->
 	
 </body>
 </html>
