implement the our parthners block and mobile version

--- a/index.html
+++ b/index.html
@@ -154,47 +154,47 @@
 		</div>
 	</div>
 </section>
-<!--<section class="standard-p-block our-partners">-->
-<!--	<div class="container">-->
-<!--		<div class="row">-->
-<!--			<div class="col-12 d-flex flex-column align-items-center justify-content-center">-->
-<!--				<h3 class="middle-main-title">Our Partners</h3>-->
-<!--				<div class="grid-section">-->
-<!--					<div class="grid-item">-->
-<!--						<div class="grid-body"></div>-->
-<!--					</div>-->
-<!--					<div class="grid-item">-->
-<!--						<div class="grid-body"></div>-->
-<!--					</div>-->
-<!--					<div class="grid-item">-->
-<!--						<div class="grid-body"></div>-->
-<!--					</div>-->
-<!--					<div class="grid-item">-->
-<!--						<div class="grid-body"></div>-->
-<!--					</div>-->
-<!--					<div class="grid-item">-->
-<!--						<div class="grid-body"></div>-->
-<!--					</div>-->
-<!--					<div class="grid-item">-->
-<!--						<div class="grid-body"></div>-->
-<!--					</div>-->
-<!--					<div class="grid-item">-->
-<!--						<div class="grid-body"></div>-->
-<!--					</div>-->
-<!--					<div class="grid-item">-->
-<!--						<div class="grid-body"></div>-->
-<!--					</div>-->
-<!--					<div class="grid-item">-->
-<!--						<div class="grid-body"></div>-->
-<!--					</div>-->
-<!--					<div class="grid-item">-->
-<!--						<div class="grid-body"></div>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--			</div>-->
-<!--		</div>-->
-<!--	</div>-->
-<!--</section>-->
+<section class="standard-p-block our-partners">
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-lg-9 col-12">
+				<h3 class="middle-main-title">Our Partners</h3>
+				<div class="grid-section">
+					<div class="grid-item">
+						<div class="grid-body"></div>
+					</div>
+					<div class="grid-item">
+						<div class="grid-body"></div>
+					</div>
+					<div class="grid-item">
+						<div class="grid-body"></div>
+					</div>
+					<div class="grid-item">
+						<div class="grid-body"></div>
+					</div>
+					<div class="grid-item">
+						<div class="grid-body"></div>
+					</div>
+					<div class="grid-item">
+						<div class="grid-body"></div>
+					</div>
+					<div class="grid-item">
+						<div class="grid-body"></div>
+					</div>
+					<div class="grid-item">
+						<div class="grid-body"></div>
+					</div>
+					<div class="grid-item">
+						<div class="grid-body"></div>
+					</div>
+					<div class="grid-item">
+						<div class="grid-body"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 <!--<footer>-->
 <!--	<div class="container">-->
 <!--		<div class="row">-->
