implement the vendor page first main block

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 	<link rel="stylesheet" href="libs/bootstrap4/css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="libs/animate/animate.css">
 
-	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/media.css">
+	<link rel="stylesheet" href="css/fonts.min.css">
+	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="css/media.min.css">
 
 	<script src="libs/modernizr/modernizr.js"></script>
 
@@ -37,13 +37,13 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 wrapper-line">
-				<a href="#" class="logo">
+				<a href="index.html" class="logo">
 					<img src="img/logo.png" alt="">
 				</a>
 				<ul class="nav-menu">
-					<li><a href="#" class="hover-state">FOR VENDORS</a></li>
-					<li><a href="#" class="hover-state">FOR EMPLOYERS</a></li>
-					<li><a href="#" class="hover-state">ABOUT</a></li>
+					<li><a href="for-vendors.html" class="hover-state">FOR VENDORS</a></li>
+					<li><a href="for-employers.html" class="hover-state">FOR EMPLOYERS</a></li>
+					<li><a href="about-us.html" class="hover-state">ABOUT</a></li>
 					<li><a href="#" class="hover-state">FAQ</a></li>
 				</ul>
 				<a href="#" class="menu-button">MENU</a>
@@ -53,10 +53,10 @@
 </header>
 <nav class="top_mnu">
 	<ul>
-		<li><a href="#">Home</a></li>
-		<li><a href="#">For Vendors</a></li>
-		<li><a href="#">For Employers</a></li>
-		<li><a href="#">About</a></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="for-vendors.html">For Vendors</a></li>
+		<li><a href="for-employers.html">For Employers</a></li>
+		<li><a href="about-us.html">About</a></li>
 		<li><a href="#">FAQ</a></li>
 		<li><a href="#" class="menu-button">close menu</a></li>
 	</ul>
@@ -71,8 +71,8 @@
 					</h1>
 					<p class="description">Your employees are unique. Their benefits should be too.</p>
 					<div class="buttons-wrapper">
-						<a href="#" class="button full-blue hover-change">Play Video</a>
-						<a href="#" class="button transparent-blue hover-change">Sign Up</a>
+						<a href="#" class="button full-blue hover-change hover-state">Play Video</a>
+						<a href="#" class="button transparent-blue hover-change hover-state">Sign Up</a>
 					</div>
 				</div>
 				<div class="media-section video">
@@ -195,30 +195,30 @@
 		</div>
 	</div>
 </section>
-<!--<footer>-->
-<!--	<div class="container">-->
-<!--		<div class="row">-->
-<!--			<div class="col-12 wrapper-line">-->
-<!--				<div class="left-side">-->
-<!--					<a href="index.html" class="logo">-->
-<!--						<img src="img/white-logo.png" alt="">-->
-<!--					</a>-->
-<!--					<ul class="nav-menu">-->
-<!--						<li><a href="#">for vendors</a></li>-->
-<!--						<li><a href="#">for employees</a></li>-->
-<!--						<li><a href="#">about</a></li>-->
-<!--						<li><a href="#">FAQ</a></li>-->
-<!--					</ul>-->
-<!--				</div>-->
-<!--				<div class="right-side">-->
-<!--					<a href="#" class="button medium-blue hover-state">Connect with Us</a>-->
-<!--					<p class="simple-text">info@ajudabenefits.com</p>-->
-<!--					<p class="simple-text">©2022 Ajuda benefits</p>-->
-<!--				</div>-->
-<!--			</div>-->
-<!--		</div>-->
-<!--	</div>-->
-<!--</footer>-->
+<footer>
+	<div class="container">
+		<div class="row">
+			<div class="col-12 wrapper-line">
+				<div class="left-side">
+					<a href="index.html" class="logo">
+						<img src="img/white-logo.png" alt="">
+					</a>
+					<ul class="nav-menu">
+						<li><a href="#">for vendors</a></li>
+						<li><a href="#">for employees</a></li>
+						<li><a href="#">about</a></li>
+						<li><a href="#">FAQ</a></li>
+					</ul>
+				</div>
+				<div class="right-side">
+					<a href="#" class="button medium-blue hover-state">Connect with Us</a>
+					<p class="simple-text">info@ajudabenefits.com</p>
+					<p class="simple-text">©2022 Ajuda benefits</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
 
 	<div class="loader">
 		<div class="loader_inner"></div>
@@ -231,12 +231,12 @@
 	<script src="libs/respond/respond.min.js"></script>
 	<![endif]-->
 	
-<!--	<script src="libs/jquery/jquery-1.11.2.min.js"></script>-->
-<!--	<script src="libs/waypoints/waypoints.min.js"></script>-->
-<!--	<script src="libs/animate/animate-css.js"></script>-->
+	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
+	<script src="libs/waypoints/waypoints.min.js"></script>
+	<script src="libs/animate/animate-css.js"></script>
 <!--	<script src="libs/plugins-scroll/plugins-scroll.js"></script>-->
 	
-<!--	<script src="js/common.js"></script>-->
+	<script src="js/common.js"></script>
 	
 </body>
 </html>
