implement the vendor page first main block and mobile version

--- a/for-vendors.html
+++ b/for-vendors.html
@@ -61,7 +61,7 @@
 		<li><a href="#" class="menu-button">close menu</a></li>
 	</ul>
 </nav>
-<section class="main vendors bg-img-settings">
+<section class="main vendors bg-img-settings common">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 wrapper-content">
