--- a/for-vendors.html
+++ b/for-vendors.html
@@ -8,7 +8,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Ajuda | Home page</title>
+	<title>Ajuda | For vendors</title>
 	<meta name="description" content="">
 
 	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
@@ -124,6 +124,57 @@
 		</div>
 	</div>
 </section>
+<section class="sign-up-form bg-img-settings vendor">
+	<div class="container">
+		<div class="row">
+			<div class="col-12 wrapper-block">
+				<div class="form-wrapper">
+					<div class="form">
+						<div class="text-block">
+							<h5 class="smallest-title">diversify your clientele </h5>
+							<h3 class="middle-main-title">Less Marketing, More Sales</h3>
+							<ul class="list-benefits">
+								<li>
+									<span class="icon">
+										<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M22 11.9781V12.8981C21.9988 15.0545 21.3005 17.1527 20.0093 18.8799C18.7182 20.607 16.9033 21.8705 14.8354 22.482C12.7674 23.0934 10.5573 23.02 8.53447 22.2726C6.51168 21.5253 4.78465 20.1442 3.61096 18.3351C2.43727 16.5261 1.87979 14.3861 2.02168 12.2344C2.16356 10.0826 2.99721 8.03438 4.39828 6.39513C5.79935 4.75588 7.69279 3.61344 9.79619 3.1382C11.8996 2.66297 14.1003 2.88039 16.07 3.75806" stroke="#1585FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+											<path d="M22 4.89795L12 14.9079L9 11.9079" stroke="#1585FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+										</svg>
+									</span>
+									<p class="text">Gain access to qualified customers</p>
+								</li>
+								<li>
+									<span class="icon">
+										<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M22 11.9781V12.8981C21.9988 15.0545 21.3005 17.1527 20.0093 18.8799C18.7182 20.607 16.9033 21.8705 14.8354 22.482C12.7674 23.0934 10.5573 23.02 8.53447 22.2726C6.51168 21.5253 4.78465 20.1442 3.61096 18.3351C2.43727 16.5261 1.87979 14.3861 2.02168 12.2344C2.16356 10.0826 2.99721 8.03438 4.39828 6.39513C5.79935 4.75588 7.69279 3.61344 9.79619 3.1382C11.8996 2.66297 14.1003 2.88039 16.07 3.75806" stroke="#1585FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+											<path d="M22 4.89795L12 14.9079L9 11.9079" stroke="#1585FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+										</svg>
+									</span>
+									<p class="text">Be seen by employees across the Netherlands</p>
+								</li>
+								<li>
+									<span class="icon">
+										<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M22 11.9781V12.8981C21.9988 15.0545 21.3005 17.1527 20.0093 18.8799C18.7182 20.607 16.9033 21.8705 14.8354 22.482C12.7674 23.0934 10.5573 23.02 8.53447 22.2726C6.51168 21.5253 4.78465 20.1442 3.61096 18.3351C2.43727 16.5261 1.87979 14.3861 2.02168 12.2344C2.16356 10.0826 2.99721 8.03438 4.39828 6.39513C5.79935 4.75588 7.69279 3.61344 9.79619 3.1382C11.8996 2.66297 14.1003 2.88039 16.07 3.75806" stroke="#1585FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+											<path d="M22 4.89795L12 14.9079L9 11.9079" stroke="#1585FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+										</svg>
+									</span>
+									<p class="text">Market to a unique diverse client base</p>
+								</li>
+							</ul>
+						</div>
+						<div class="form-body-wrapper">
+							<div class="form-body">
+								<h4 class="form-title">Sign Up</h4>
+								<iframe id="JotFormIFrame-221725954764364" title="Vendor Form 2" onload="window.parent.scrollTo(0,0)" allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera" src="https://form.jotform.com/221725954764364" frameborder="0" style=" min-width: 100%; height:539px; border:none;" scrolling="no" > </iframe> <script type="text/javascript"> var ifr = document.getElementById("JotFormIFrame-221725954764364"); if (ifr) { var src = ifr.src; var iframeParams = []; if (window.location.href && window.location.href.indexOf("?") > -1) { iframeParams = iframeParams.concat(window.location.href.substr(window.location.href.indexOf("?") + 1).split('&')); } if (src && src.indexOf("?") > -1) { iframeParams = iframeParams.concat(src.substr(src.indexOf("?") + 1).split("&")); src = src.substr(0, src.indexOf("?")) } iframeParams.push("isIframeEmbed=1"); ifr.src = src + "?" + iframeParams.join('&'); } window.handleIFrameMessage = function(e) { if (typeof e.data === 'object') { return; } var args = e.data.split(":"); if (args.length > 2) { iframe = document.getElementById("JotFormIFrame-" + args[(args.length - 1)]); } else { iframe = document.getElementById("JotFormIFrame"); } if (!iframe) { return; } switch (args[0]) { case "scrollIntoView": iframe.scrollIntoView(); break; case "setHeight": iframe.style.height = args[1] + "px"; break; case "collapseErrorPage": if (iframe.clientHeight > window.innerHeight) { iframe.style.height = window.innerHeight + "px"; } break; case "reloadPage": window.location.reload(); break; case "loadScript": if( !window.isPermitted(e.origin, ['jotform.com', 'jotform.pro']) ) { break; } var src = args[1]; if (args.length > 3) { src = args[1] + ':' + args[2]; } var script = document.createElement('script'); script.src = src; script.type = 'text/javascript'; document.body.appendChild(script); break; case "exitFullscreen": if (window.document.exitFullscreen) window.document.exitFullscreen(); else if (window.document.mozCancelFullScreen) window.document.mozCancelFullScreen(); else if (window.document.mozCancelFullscreen) window.document.mozCancelFullScreen(); else if (window.document.webkitExitFullscreen) window.document.webkitExitFullscreen(); else if (window.document.msExitFullscreen) window.document.msExitFullscreen(); break; } var isJotForm = (e.origin.indexOf("jotform") > -1) ? true : false; if(isJotForm && "contentWindow" in iframe && "postMessage" in iframe.contentWindow) { var urls = {"docurl":encodeURIComponent(document.URL),"referrer":encodeURIComponent(document.referrer)}; iframe.contentWindow.postMessage(JSON.stringify({"type":"urls","value":urls}), "*"); } }; window.isPermitted = function(originUrl, whitelisted_domains) { var url = document.createElement('a'); url.href = originUrl; var hostname = url.hostname; var result = false; if( typeof hostname !== 'undefined' ) { whitelisted_domains.forEach(function(element) { if( hostname.slice((-1 * element.length - 1)) === '.'.concat(element) || hostname === element ) { result = true; } }); return result; } }; if (window.addEventListener) { window.addEventListener("message", handleIFrameMessage, false); } else if (window.attachEvent) { window.attachEvent("onmessage", handleIFrameMessage); } </script>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 <!--<footer>-->
 <!--	<div class="container">-->
@@ -167,6 +218,8 @@
 <!--	<script src="libs/plugins-scroll/plugins-scroll.js"></script>-->
 	
 	<script src="js/common.js"></script>
+
+
 	
 </body>
 </html>
