--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
 	<script src="libs/modernizr/modernizr.js"></script>
 
+
+
 </head>
 
 <body>
@@ -71,12 +73,12 @@
 					</h1>
 					<p class="description">Your employees are unique. Their benefits should be too.</p>
 					<div class="buttons-wrapper">
-						<a href="#" class="button full-blue hover-change hover-state">Play Video</a>
-						<a href="#" class="button transparent-blue hover-change hover-state">Sign Up</a>
+						<a href="#" id="to-play" class="button full-blue hover-change hover-state to-play">Play Video</a>
+						<a href="#sign-up" class="button transparent-blue hover-change hover-state">Sign Up</a>
 					</div>
 				</div>
 				<div class="media-section video">
-					<iframe width="100%" height="100%" src="https://www.youtube.com/embed/wMnoL74iBgQ?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay=0&rel=0; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div id="player"></div>
 				</div>
 			</div>
 			<div class="col-12">
@@ -98,7 +100,8 @@
 		</div>
 	</div>
 </section>
-<section class="benefits">
+
+<section class="benefits" id="sign-up">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -220,9 +223,6 @@
 	</div>
 </footer>
 
-	<div class="loader">
-		<div class="loader_inner"></div>
-	</div>
 
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
@@ -237,6 +237,33 @@
 <!--	<script src="libs/plugins-scroll/plugins-scroll.js"></script>-->
 	
 	<script src="js/common.js"></script>
-	
+
+
+
+<script>
+	// 2. This code loads the IFrame Player API code asynchronously.
+	var tag = document.createElement('script');
+
+	tag.src = "https://www.youtube.com/iframe_api";
+	var firstScriptTag = document.getElementsByTagName('script')[0];
+	firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+	var player;
+	function onYouTubeIframeAPIReady() {
+		player = new YT.Player('player', {
+			height: '100%',
+			width: '100%',
+			videoId: 'wMnoL74iBgQ',
+		});
+	}
+
+	$('#to-play').click(function (e) {
+		e.preventDefault();
+		player.playVideo();
+	})
+
+</script>
+
+
 </body>
 </html>
