implement the vendor page with responsive mobile

--- a/for-vendors.html
+++ b/for-vendors.html
@@ -129,6 +129,7 @@
 		<div class="row">
 			<div class="col-12 wrapper-block">
 				<div class="form-wrapper">
+					<img src="img/sign-up-vendor-form-mobile-bg.png" alt="" class="img-form-mobile">
 					<div class="form">
 						<div class="text-block">
 							<h5 class="smallest-title">diversify your clientele </h5>
@@ -175,35 +176,65 @@
 		</div>
 	</div>
 </section>
-
-<!--<footer>-->
-<!--	<div class="container">-->
-<!--		<div class="row">-->
-<!--			<div class="col-12 wrapper-line">-->
-<!--				<div class="left-side">-->
-<!--					<a href="index.html" class="logo">-->
-<!--						<img src="img/white-logo.png" alt="">-->
-<!--					</a>-->
-<!--					<ul class="nav-menu">-->
-<!--						<li><a href="#">for vendors</a></li>-->
-<!--						<li><a href="#">for employees</a></li>-->
-<!--						<li><a href="#">about</a></li>-->
-<!--						<li><a href="#">FAQ</a></li>-->
-<!--					</ul>-->
-<!--				</div>-->
-<!--				<div class="right-side">-->
-<!--					<a href="#" class="button medium-blue hover-state">Connect with Us</a>-->
-<!--					<p class="simple-text">info@ajudabenefits.com</p>-->
-<!--					<p class="simple-text">©2022 Ajuda benefits</p>-->
-<!--				</div>-->
-<!--			</div>-->
-<!--		</div>-->
-<!--	</div>-->
-<!--</footer>-->
-
-	<div class="loader">
-		<div class="loader_inner"></div>
+<section class="standard-p-block how-it-works bg-img-settings yellow">
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<div class="content-wrapper">
+					<h3 class="middle-main-title">How Does it Work?</h3>
+				</div>
+				<div class="tiles-wrapper">
+					<div class="tile">
+						<div class="tile-body">
+							<img src="img/how-it-works-1.png" alt="">
+							<h4 class="smallest-title">You offer your service at
+								a set cost with Ajuda</h4>
+						</div>
+					</div>
+					<div class="tile">
+						<div class="tile-body">
+							<img src="img/how-it-works-2.png" alt="">
+							<h4 class="smallest-title">Clients find your
+								services on our web app</h4>
+						</div>
+					</div>
+					<div class="tile">
+						<div class="tile-body">
+							<img src="img/how-it-works-3.png" alt="">
+							<h4 class="smallest-title">They redeem their voucher and you get paid! </h4>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
+</section>
+<footer>
+	<div class="container">
+		<div class="row">
+			<div class="col-12 wrapper-line">
+				<div class="left-side">
+					<a href="index.html" class="logo">
+						<img src="img/white-logo.png" alt="">
+					</a>
+					<ul class="nav-menu">
+						<li><a href="for-vendors.html">for vendors</a></li>
+						<li><a href="for-employees">for employees</a></li>
+						<li><a href="about-us.html">about</a></li>
+						<li><a href="#">FAQ</a></li>
+					</ul>
+				</div>
+				<div class="right-side">
+					<a href="about-us.html" class="button medium-blue hover-state">Connect with Us</a>
+					<p class="simple-text">info@ajudabenefits.com</p>
+					<p class="simple-text">©2022 Ajuda benefits</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
+
+
 
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
@@ -213,10 +244,8 @@
 	<![endif]-->
 	
 	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
-	<script src="libs/waypoints/waypoints.min.js"></script>
 	<script src="libs/animate/animate-css.js"></script>
-<!--	<script src="libs/plugins-scroll/plugins-scroll.js"></script>-->
-	
+
 	<script src="js/common.js"></script>
 
 
