--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
 						<img src="img/white-logo.png" alt="">
 					</a>
 					<ul class="nav-menu">
-						<li><a href="#">for vendors</a></li>
-						<li><a href="#">for employees</a></li>
-						<li><a href="#">about</a></li>
+						<li><a href="for-vendors.html">for vendors</a></li>
+						<li><a href="for-employees">for employees</a></li>
+						<li><a href="about-us.html">about</a></li>
 						<li><a href="#">FAQ</a></li>
 					</ul>
 				</div>
 				<div class="right-side">
-					<a href="#" class="button medium-blue hover-state">Connect with Us</a>
+					<a href="about-us.html" class="button medium-blue hover-state">Connect with Us</a>
 					<p class="simple-text">info@ajudabenefits.com</p>
 					<p class="simple-text">©2022 Ajuda benefits</p>
 				</div>
@@ -232,7 +232,6 @@
 	<![endif]-->
 	
 	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
-	<script src="libs/waypoints/waypoints.min.js"></script>
 	<script src="libs/animate/animate-css.js"></script>
 <!--	<script src="libs/plugins-scroll/plugins-scroll.js"></script>-->
 	
