implemented about us page

--- a/for-employers.html
+++ b/for-employers.html
@@ -334,7 +334,7 @@
 					</a>
 					<ul class="nav-menu">
 						<li><a href="for-vendors.html">for vendors</a></li>
-						<li><a href="for-employees">for employees</a></li>
+						<li><a href="for-employers.html">for employees</a></li>
 						<li><a href="about-us.html">about</a></li>
 						<li><a href="#">FAQ</a></li>
 					</ul>
