implemented about us page with mobile version

--- a/about-us.html
+++ b/about-us.html
@@ -63,11 +63,11 @@
 <section class="img-snippet-mobile d-sm-none">
 	<img src="img/about-us-snippet-mobile.jpg" alt="">
 </section>
-<section class="main bg-img-settings common about-us">
+<section class="main common about-us">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 wrapper-content mb-0">
-				<div class="text-section">
+				<div class="text-section mb-0">
 					<h1 class="middle-main-title blue-primary-color">Who We Are</h1>
 					<p class="description">Ajuda is portuguese for “help” and our purpose is to improve employees´ lives through benefits. Ajuda was founded by Ana Luis and Jonathan Burger who both envisioned a new way forward for HR and benefits. </p>
 					<p class="description blue-primary-color">As a company, Ajuda strongly believes in inclusion & diversity. We strive to create a diverse workforce and give opportunities to those usually underrepresented.</p>
@@ -79,7 +79,7 @@
 		</div>
 	</div>
 </section>
-<section class="team">
+<section class="team bg-img-settings">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -109,7 +109,7 @@
 						<div class="tile-body">
 							<h4 class="middle-main-title blue-primary-color">Contact Us</h4>
 							<div class="context-block">
-								<p class="description">Want to know more? Just have a general question not answered on our site?</p>
+								<p class="description"><span class="next">Want to know more?</span> Just have a general question not answered on our site?</p>
 								<p class="description">Send us an email at <span class="blue-primary-color">info@ajudabenefits.com</span></p>
 							</div>
 						</div>
