implemented animation for mobile menu

--- a/about-us.html
+++ b/about-us.html
@@ -67,7 +67,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 wrapper-content mb-0">
-				<div class="text-section mb-0">
+				<div class="text-section">
 					<h1 class="middle-main-title blue-primary-color">Who We Are</h1>
 					<p class="description">Ajuda is portuguese for “help” and our purpose is to improve employees´ lives through benefits. Ajuda was founded by Ana Luis and Jonathan Burger who both envisioned a new way forward for HR and benefits. </p>
 					<p class="description blue-primary-color">As a company, Ajuda strongly believes in inclusion & diversity. We strive to create a diverse workforce and give opportunities to those usually underrepresented.</p>
