--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 <body>
 
 
-<header>
+<header id="#header" class="sticky-header">
 	<div class="container">
 		<div class="row">
-			<div class="col-12 wrapper-line">
-				<a href="index.html" class="logo">
+			<div class="col-12 wrapper-line animation">
+				<a href="index.html" class="logo animation">
 					<img src="img/logo.png" alt="">
 				</a>
 				<ul class="nav-menu">
@@ -48,7 +48,7 @@
 					<li><a href="about-us.html" class="hover-state">ABOUT</a></li>
 					<li><a href="#" class="hover-state">FAQ</a></li>
 				</ul>
-				<a href="#" class="menu-button">MENU</a>
+				<a href="#" class="menu-button animation">MENU</a>
 			</div>
 		</div>
 	</div>
@@ -223,6 +223,30 @@
 	</div>
 </footer>
 
+	<script>
+		// 2. This code loads the IFrame Player API code asynchronously.
+		var tag = document.createElement('script');
+
+		tag.src = "https://www.youtube.com/iframe_api";
+		var firstScriptTag = document.getElementsByTagName('script')[0];
+		firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+		var player;
+		function onYouTubeIframeAPIReady() {
+			player = new YT.Player('player', {
+				height: '100%',
+				width: '100%',
+				videoId: 'wMnoL74iBgQ',
+			});
+		}
+
+		$('#to-play').click(function (e) {
+			e.preventDefault();
+			player.playVideo();
+		})
+
+	</script>
+
 
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
@@ -239,29 +263,7 @@
 
 
 
-<script>
-	// 2. This code loads the IFrame Player API code asynchronously.
-	var tag = document.createElement('script');
-
-	tag.src = "https://www.youtube.com/iframe_api";
-	var firstScriptTag = document.getElementsByTagName('script')[0];
-	firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-	var player;
-	function onYouTubeIframeAPIReady() {
-		player = new YT.Player('player', {
-			height: '100%',
-			width: '100%',
-			videoId: 'wMnoL74iBgQ',
-		});
-	}
-
-	$('#to-play').click(function (e) {
-		e.preventDefault();
-		player.playVideo();
-	})
-
-</script>
+	
 
 
 </body>
