--- a/about-us.html
+++ b/about-us.html
@@ -32,11 +32,11 @@
 
 <body class="about-us-background">
 
-<header>
+<header class="sticky-header">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 wrapper-line">
-				<a href="index.html" class="logo">
+				<a href="index.html" class="logo animation">
 					<img src="img/logo.png" alt="">
 				</a>
 				<ul class="nav-menu">
@@ -45,7 +45,7 @@
 					<li><a href="about-us.html" class="hover-state">ABOUT</a></li>
 					<li><a href="#" class="hover-state">FAQ</a></li>
 				</ul>
-				<a href="#" class="menu-button">MENU</a>
+				<a href="#" class="menu-button animation">MENU</a>
 			</div>
 		</div>
 	</div>
