--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
 
-<header id="#header" class="sticky-header">
+<header class="sticky-header">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 wrapper-line animation">
@@ -223,8 +223,27 @@
 	</div>
 </footer>
 
+
+
+
+	<!--[if lt IE 9]>
+	<script src="libs/html5shiv/es5-shim.min.js"></script>
+	<script src="libs/html5shiv/html5shiv.min.js"></script>
+	<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
+	<script src="libs/respond/respond.min.js"></script>
+	<![endif]-->
+	
+	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
+<!--	<script src="libs/plugins-scroll/plugins-scroll.js"></script>-->
+	
+	<script src="js/common.js"></script>
+
+
+
 	<script>
-		// 2. This code loads the IFrame Player API code asynchronously.
+	
+		// Play button youtube API
+
 		var tag = document.createElement('script');
 
 		tag.src = "https://www.youtube.com/iframe_api";
@@ -246,24 +265,6 @@
 		})
 
 	</script>
-
-
-	<!--[if lt IE 9]>
-	<script src="libs/html5shiv/es5-shim.min.js"></script>
-	<script src="libs/html5shiv/html5shiv.min.js"></script>
-	<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
-	<script src="libs/respond/respond.min.js"></script>
-	<![endif]-->
-	
-	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
-	<script src="libs/animate/animate-css.js"></script>
-<!--	<script src="libs/plugins-scroll/plugins-scroll.js"></script>-->
-	
-	<script src="js/common.js"></script>
-
-
-
-	
 
 
 </body>
