polish elements of pages

--- a/about-us.html
+++ b/about-us.html
@@ -37,13 +37,12 @@
 		<div class="row">
 			<div class="col-12 wrapper-line">
 				<a href="index.html" class="logo animation">
-					<img src="img/logo.png" alt="">
+					<img src="img/logo.svg" alt="">
 				</a>
 				<ul class="nav-menu">
 					<li><a href="for-vendors.html" class="hover-state">FOR VENDORS</a></li>
 					<li><a href="for-employers.html" class="hover-state">FOR EMPLOYERS</a></li>
 					<li><a href="about-us.html" class="hover-state">ABOUT</a></li>
-					<li><a href="#" class="hover-state">FAQ</a></li>
 				</ul>
 				<a href="#" class="menu-button animation">MENU</a>
 			</div>
@@ -56,7 +55,6 @@
 		<li><a href="for-vendors.html">For Vendors</a></li>
 		<li><a href="for-employers.html">For Employers</a></li>
 		<li><a href="about-us.html">About</a></li>
-		<li><a href="#">FAQ</a></li>
 		<li><a href="#" class="menu-button">close menu</a></li>
 	</ul>
 </nav>
@@ -125,13 +123,12 @@
 			<div class="col-12 wrapper-line">
 				<div class="left-side">
 					<a href="index.html" class="logo">
-						<img src="img/white-logo.png" alt="">
+						<img src="img/white-logo.svg" alt="">
 					</a>
 					<ul class="nav-menu">
 						<li><a href="for-vendors.html">for vendors</a></li>
 						<li><a href="for-employers.html">for employees</a></li>
 						<li><a href="about-us.html">about</a></li>
-						<li><a href="#">FAQ</a></li>
 					</ul>
 				</div>
 				<div class="right-side">
