--- a/for-vendors.html
+++ b/for-vendors.html
@@ -38,13 +38,12 @@
 		<div class="row">
 			<div class="col-12 wrapper-line">
 				<a href="index.html" class="logo animation">
-					<img src="img/logo.png" alt="">
+					<img src="img/logo.svg" alt="">
 				</a>
 				<ul class="nav-menu">
 					<li><a href="for-vendors.html" class="hover-state">FOR VENDORS</a></li>
 					<li><a href="for-employers.html" class="hover-state">FOR EMPLOYERS</a></li>
 					<li><a href="about-us.html" class="hover-state">ABOUT</a></li>
-					<li><a href="#" class="hover-state">FAQ</a></li>
 				</ul>
 				<a href="#" class="menu-button animation">MENU</a>
 			</div>
@@ -57,7 +56,6 @@
 		<li><a href="for-vendors.html">For Vendors</a></li>
 		<li><a href="for-employers.html">For Employers</a></li>
 		<li><a href="about-us.html">About</a></li>
-		<li><a href="#">FAQ</a></li>
 		<li><a href="#" class="menu-button">close menu</a></li>
 	</ul>
 </nav>
@@ -69,7 +67,7 @@
 					<h1 class="middle-main-title">Become an Ajuda Vendor</h1>
 					<p class="description">Offer a service that you believe employees can benefit from? If your business can offer vouchers for your services and meet our terms of service you’ll be able to advertise to our diverse employees in The Netherlands. </p>
 					<div class="buttons-wrapper">
-						<a href="#" class="button full-pink hover-change hover-state">Sign Up Today</a>
+						<a href="#sign-up" class="button full-pink hover-change hover-state">Sign Up Today</a>
 					</div>
 				</div>
 				<div class="media-section image">
@@ -124,7 +122,7 @@
 		</div>
 	</div>
 </section>
-<section class="sign-up-form bg-img-settings vendor">
+<section id="sign-up" class="sign-up-form bg-img-settings vendor">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 wrapper-block">
@@ -215,13 +213,12 @@
 			<div class="col-12 wrapper-line">
 				<div class="left-side">
 					<a href="index.html" class="logo">
-						<img src="img/white-logo.png" alt="">
+						<img src="img/white-logo.svg" alt="">
 					</a>
 					<ul class="nav-menu">
 						<li><a href="for-vendors.html">for vendors</a></li>
 						<li><a href="for-employers.html">for employees</a></li>
 						<li><a href="about-us.html">about</a></li>
-						<li><a href="#">FAQ</a></li>
 					</ul>
 				</div>
 				<div class="right-side">
@@ -236,12 +233,12 @@
 
 
 
-	<!--[if lt IE 9]>
-	<script src="libs/html5shiv/es5-shim.min.js"></script>
-	<script src="libs/html5shiv/html5shiv.min.js"></script>
-	<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
-	<script src="libs/respond/respond.min.js"></script>
-	<![endif]-->
+	<!-- [if lt IE 9]> -->
+		<script src="libs/html5shiv/es5-shim.min.js"></script>
+		<script src="libs/html5shiv/html5shiv.min.js"></script>
+		<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
+		<script src="libs/respond/respond.min.js"></script>
+	<!-- <![endif] -->
 	
 	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
 	<script src="libs/animate/animate-css.js"></script>
