--- a/index.html
+++ b/index.html
@@ -28,25 +28,20 @@
 
 	<script src="libs/modernizr/modernizr.js"></script>
 
-
-
 </head>
 
 <body>
-
-
 <header class="sticky-header">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 wrapper-line animation">
 				<a href="index.html" class="logo animation">
-					<img src="img/logo.png" alt="">
+					<img src="img/logo.svg" alt="">
 				</a>
 				<ul class="nav-menu">
 					<li><a href="for-vendors.html" class="hover-state">FOR VENDORS</a></li>
 					<li><a href="for-employers.html" class="hover-state">FOR EMPLOYERS</a></li>
 					<li><a href="about-us.html" class="hover-state">ABOUT</a></li>
-					<li><a href="#" class="hover-state">FAQ</a></li>
 				</ul>
 				<a href="#" class="menu-button animation">MENU</a>
 			</div>
@@ -59,7 +54,6 @@
 		<li><a href="for-vendors.html">For Vendors</a></li>
 		<li><a href="for-employers.html">For Employers</a></li>
 		<li><a href="about-us.html">About</a></li>
-		<li><a href="#">FAQ</a></li>
 		<li><a href="#" class="menu-button">close menu</a></li>
 	</ul>
 </nav>
@@ -100,7 +94,6 @@
 		</div>
 	</div>
 </section>
-
 <section class="benefits" id="sign-up">
 	<div class="container">
 		<div class="row">
@@ -157,7 +150,7 @@
 		</div>
 	</div>
 </section>
-<section class="standard-p-block our-partners">
+<!-- <section class="standard-p-block our-partners">
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-lg-9 col-12">
@@ -197,20 +190,19 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 <footer>
 	<div class="container">
 		<div class="row">
 			<div class="col-12 wrapper-line">
 				<div class="left-side">
 					<a href="index.html" class="logo">
-						<img src="img/white-logo.png" alt="">
+						<img src="img/white-logo.svg" alt="">
 					</a>
 					<ul class="nav-menu">
 						<li><a href="for-vendors.html">for vendors</a></li>
 						<li><a href="for-employers.html">for employees</a></li>
 						<li><a href="about-us.html">about</a></li>
-						<li><a href="#">FAQ</a></li>
 					</ul>
 				</div>
 				<div class="right-side">
@@ -223,27 +215,21 @@
 	</div>
 </footer>
 
-
-
-
-	<!--[if lt IE 9]>
+	<!-- [if lt IE 9]> -->
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
 	<script src="libs/html5shiv/html5shiv.min.js"></script>
 	<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
 	<script src="libs/respond/respond.min.js"></script>
-	<![endif]-->
+	<!-- <![endif] -->
 	
 	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
-<!--	<script src="libs/plugins-scroll/plugins-scroll.js"></script>-->
+
 	
 	<script src="js/common.js"></script>
 
-
-
+	 <!-- Play button youtube API -->
 	<script>
 	
-		// Play button youtube API
-
 		var tag = document.createElement('script');
 
 		tag.src = "https://www.youtube.com/iframe_api";
