--- a/for-employers.html
+++ b/for-employers.html
@@ -38,13 +38,12 @@
 		<div class="row">
 			<div class="col-12 wrapper-line">
 				<a href="index.html" class="logo animation">
-					<img src="img/logo.png" alt="">
+					<img src="img/logo.svg" alt="">
 				</a>
 				<ul class="nav-menu">
 					<li><a href="for-vendors.html" class="hover-state">FOR VENDORS</a></li>
 					<li><a href="for-employers.html" class="hover-state">FOR EMPLOYERS</a></li>
 					<li><a href="about-us.html" class="hover-state">ABOUT</a></li>
-					<li><a href="#" class="hover-state">FAQ</a></li>
 				</ul>
 				<a href="#" class="menu-button animation">MENU</a>
 			</div>
@@ -57,7 +56,6 @@
 		<li><a href="for-vendors.html">For Vendors</a></li>
 		<li><a href="for-employers.html">For Employers</a></li>
 		<li><a href="about-us.html">About</a></li>
-		<li><a href="#">FAQ</a></li>
 		<li><a href="#" class="menu-button">close menu</a></li>
 	</ul>
 </nav>
@@ -69,7 +67,7 @@
 					<h1 class="middle-main-title">Make Benefits  Personal</h1>
 					<p class="description">Make your company stand out by offering the most diverse personal benefits on the market. Our range of local and global benefits are available to your employees from day one. From accounting to zoomba and everything in-between, there’s something for everyone! In addition to happier employees, Ajuda makes recruiting top talent a breeze.  </p>
 					<div class="buttons-wrapper">
-						<a href="#" class="button full-pink hover-change hover-state">Sign Up Today</a>
+						<a href="#sign-up" class="button full-pink hover-change hover-state">Sign Up Today</a>
 					</div>
 				</div>
 				<div class="media-section image">
@@ -124,7 +122,7 @@
 		</div>
 	</div>
 </section>
-<section class="sign-up-form bg-img-settings employers">
+<section id="sign-up" class="sign-up-form bg-img-settings employers">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 wrapper-block">
@@ -330,13 +328,12 @@
 			<div class="col-12 wrapper-line">
 				<div class="left-side">
 					<a href="index.html" class="logo">
-						<img src="img/white-logo.png" alt="">
+						<img src="img/white-logo.svg" alt="">
 					</a>
 					<ul class="nav-menu">
 						<li><a href="for-vendors.html">for vendors</a></li>
 						<li><a href="for-employers.html">for employees</a></li>
 						<li><a href="about-us.html">about</a></li>
-						<li><a href="#">FAQ</a></li>
 					</ul>
 				</div>
 				<div class="right-side">
@@ -351,12 +348,12 @@
 
 
 
-	<!--[if lt IE 9]>
+	<!-- [if lt IE 9]> -->
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
 	<script src="libs/html5shiv/html5shiv.min.js"></script>
 	<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
 	<script src="libs/respond/respond.min.js"></script>
-	<![endif]-->
+	<!-- <![endif] -->
 	
 	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
 	<script src="libs/animate/animate-css.js"></script>
