the latest update of files

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					</h1>
 					<p class="description">Your employees are unique. Their benefits should be too.</p>
 					<div class="buttons-wrapper">
-						<a href="#" id="to-play" class="button full-blue hover-change hover-state to-play">Play Video</a>
+						<!-- <a href="#" id="to-play" class="button full-blue hover-change hover-state to-play">Play Video</a> -->
 						<a href="#sign-up" class="button transparent-blue hover-change hover-state">Sign Up</a>
 					</div>
 				</div>
