the latest update

--- a/for-employers.html
+++ b/for-employers.html
@@ -41,6 +41,7 @@
 					<img src="img/logo.svg" alt="">
 				</a>
 				<ul class="nav-menu">
+					<li><a href="index.html" class="hover-state">HOME</a></li>
 					<li><a href="for-vendors.html" class="hover-state">FOR VENDORS</a></li>
 					<li><a href="for-employers.html" class="hover-state">FOR EMPLOYERS</a></li>
 					<li><a href="about-us.html" class="hover-state">ABOUT</a></li>
@@ -331,6 +332,7 @@
 						<img src="img/white-logo.svg" alt="">
 					</a>
 					<ul class="nav-menu">
+						<li><a href="index.html">home</a></li>
 						<li><a href="for-vendors.html">for vendors</a></li>
 						<li><a href="for-employers.html">for employees</a></li>
 						<li><a href="about-us.html">about</a></li>
