--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 					<img src="img/logo.svg" alt="">
 				</a>
 				<ul class="nav-menu">
+					<li><a href="index.html" class="hover-state">HOME</a></li>
 					<li><a href="for-vendors.html" class="hover-state">FOR VENDORS</a></li>
 					<li><a href="for-employers.html" class="hover-state">FOR EMPLOYERS</a></li>
 					<li><a href="about-us.html" class="hover-state">ABOUT</a></li>
@@ -72,7 +73,7 @@
 					</div>
 				</div>
 				<div class="media-section video">
-					<div id="player"></div>
+					<iframe width="100%" height="100%" src="https://www.youtube.com/embed/wMnoL74iBgQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 			</div>
 			<div class="col-12">
@@ -80,13 +81,13 @@
 					<div class="tile-wrapper">
 						<div class="tile">
 							<h3 class="tile-title small-title">Become an Ajuda Vendor</h3>
-							<a href="#" class="button primary-blue hover-state small"><span class="text">Learn More</span> <img src="img/white-icon.svg" alt=""></a>
+							<a href="for-vendors.html" class="button primary-blue hover-state small"><span class="text">Learn More</span> <img src="img/white-icon.svg" alt=""></a>
 						</div>
 					</div>
 					<div class="tile-wrapper">
 						<div class="tile">
 							<h3 class="tile-title small-title">Use Ajuda with Your Company</h3>
-							<a href="#" class="button primary-blue hover-state small">Learn More <img src="img/white-icon.svg" alt=""></a>
+							<a href="for-employers.html" class="button primary-blue hover-state small">Learn More <img src="img/white-icon.svg" alt=""></a>
 						</div>
 					</div>
 				</div>
@@ -200,6 +201,7 @@
 						<img src="img/white-logo.svg" alt="">
 					</a>
 					<ul class="nav-menu">
+						<li><a href="index.html">home</a></li>
 						<li><a href="for-vendors.html">for vendors</a></li>
 						<li><a href="for-employers.html">for employees</a></li>
 						<li><a href="about-us.html">about</a></li>
